[package]
name = "pysupercluster-rust"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pysupercluster"
crate-type = ["cdylib"]

[dependencies]
geojson = "0.24.2"
pyo3 = "0.26.0"
serde_json = "1.0.145"
supercluster = "1.2.3"
